# graveyard_eros

./: rosdep.yaml  stack.xml
eros_license/: manifest.xml
tests/eros_cpp_tutorials/: .project  CMakeLists.txt  manifest.xml
tests/eros_cpp_tutorials/src/: CMakeLists.txt  common.cpp  common.h  listener.cpp  nodelist.cpp  talker.cpp
tests/eros_cpp_tutorials/srv_gen/cpp/include/eros_cpp_tutorials/: TwoInts.h
tests/eros_msg_latency/: manifest.xml
tests/eros_nodelet_latency/: manifest.xml
tests/eros_nodelets_latency/: mainpage.dox
tests/eros_qt_tutorials/: .cproject  .project  CMakeLists.txt  manifest.xml
tests/eros_qt_tutorials/qadd_client/: CMakeLists.txt
tests/eros_qt_tutorials/qadd_client/src/: qnode.cpp
tests/eros_qt_tutorials/qadd_server/: CMakeLists.txt
tests/eros_qt_tutorials/qadd_server/src/: qnode.cpp
tests/eros_qt_tutorials/qlistener/: CMakeLists.txt
tests/eros_qt_tutorials/qlistener/include/: main_window.hpp  qnode.hpp
tests/eros_qt_tutorials/qlistener/src/: main_window.cpp  qnode.cpp
tests/eros_qt_tutorials/qlistener/ui/: main_window.ui
tests/eros_qt_tutorials/qtalker/: CMakeLists.txt
tests/eros_qt_tutorials/qtalker/include/: main_window.hpp  qnode.hpp
tests/eros_qt_tutorials/qtalker/src/: main_window.cpp  qnode.cpp
tests/eros_qt_tutorials/qtalker/ui/: main_window.ui
tests/eros_qt_tutorials/ui/: main_window.ui
tests/eros_qtalker/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
tests/eros_qtalker/include/eros_qtalker/: main_window.hpp
tests/eros_qtalker/src/: main.cpp  main_window.cpp
tests/eros_qtalker/ui/: main_window.ui
tests/eros_rpc_latency/: mainpage.dox  manifest.xml
tests/mingw_tests/: .cproject  .project  CMakeLists.txt  Makefile
tests/mingw_tests/listener/: CMakeLists.txt
tests/mingw_tests/src/: CMakeLists.txt  common.cpp  common.h  listener.cpp  nodelist.cpp  talker.cpp
tests/mingw_tests/talker/: talker.cpp
tools/eros_build/: .project  manifest.xml
tools/eros_build/cmake/: eros_build_utilities.cmake  eros_package.cmake
tools/eros_build/cmake/modules/: eros_build_utilities.cmake  eros_package.cmake
tools/eros_build/mk/: custom_installer.mk  installer.mk
tools/eros_cmake_modules/: .cproject  .project  mainpage.dox  manifest.xml
tools/eros_msg_latency/: mainpage.dox
tools/eros_nodelets_latency/: .cproject  .project  manifest.xml
tools/eros_platforms/: mainpage.dox  manifest.xml
tools/eros_python_tools/: .cproject  .project  .pydevproject  mainpage.dox  manifest.xml
tools/eros_python_tools/doxygen/: mainpage.dox  platform.dox  protect.dox  rosbuild.dox  rosplatform.dox  rosprotect.dox  rostoolchain.dox
tools/eros_python_tools/patches/cturtle/rosbuild/: private.cmake
tools/eros_python_tools/patches/diamondback/: windoze.txt
tools/eros_python_tools/patches/diamondback/readme/: rosbuild.txt  rosconsole.txt  roscpp.txt  roslaunch.txt  roslib.txt  rosout.txt  rospack.txt  rospy.txt
tools/eros_python_tools/patches/diamondback/rosboost_cfg/: rosboost_cfg.py
tools/eros_python_tools/patches/diamondback/rosbuild/: private.cmake  (+1 more)
tools/eros_python_tools/patches/mingw_port/: windoze.txt
tools/eros_python_tools/patches/trunk/: Makefile  windoze.txt
tools/eros_python_tools/patches/trunk/ros_comm/tools/rosconsole/: CMakeLists.txt
tools/eros_python_tools/patches/trunk/ros_comm/tools/rosconsole/include/ros/: assert.h
tools/eros_python_tools/patches/trunk/ros_tutorials/roscpp_tutorials/: CMakeLists.txt
tools/eros_python_tools/patches/trunk/ros_tutorials/roscpp_tutorials/talker/: CMakeLists.txt
tools/eros_python_tools/scripts/: erosprotect  rosbuild  rostoolchain  rosunprotect
tools/eros_python_tools/src/eros_python_tools/: __init__.py  build_mode.py  config.py  core.py  create_qt_package.py  platform.py  prefix.py  protect.py  select_toolchain.py  toolchain.py  unprotect.py
tools/eros_python_tools/templates/: rosconfig.tail.cmake  rosconfig.template.cmake  rostoolchain.template.cmake
tools/eros_python_tools/templates/qt/: CMakeLists.txt  manifest.xml
tools/eros_rpc_latency/: manifest.xml
tools/eros_toolchains/: .cproject  mainpage.dox  manifest.xml
tools/eros_toolchains/unported/: CMakeLists.txt  arm-generic-linux-gnueabi.cmake  arm-generic-linux-gnueabi.dox  arm-none-linux-gnueabi.cmake  arm-none-linux-gnueabi.dox  arm-samsung-linux-gnueabi.cmake  arm-samsung-linux-gnueabi.dox  arm-unknown-linux-gnueabi.cmake  arm-unknown-linux-gnueabi.dox  i586-mingw32msvc.cmake  i586-mingw32msvc.dox  i586-moblin-linux.cmake  i586-moblin-linux.dox  i686-pc-linux-gnu.cmake  i686-pc-linux-gnu.dox  i686-pc-mingw32.cmake  i686-pc-mingw32.dox
(+82 files in other folders)
