cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
rosbuild_init()
rosbuild_gensrv()
include_directories(${PROJECT_SOURCE_DIR}/srv/cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
if(MINGW)
set(CMAKE_VERBOSE_MAKEFILE TRUE)
set(WINLIBS ros log4cxx aprutil-1 expat apr-1 rpcrt4 shell32 ws2_32 advapi32 kernel32 msvcrt)
endif()
add_subdirectory(listener)
add_subdirectory(talker)
if(NOT MINGW)
add_subdirectory(notify_connect)
add_subdirectory(babbler)
add_subdirectory(add_two_ints_client)
add_subdirectory(add_two_ints_server)
add_subdirectory(add_two_ints_server_class)
add_subdirectory(anonymous_listener)
add_subdirectory(listener_with_userdata)
add_subdirectory(time_api)
add_subdirectory(listener_multiple)
add_subdirectory(listener_threaded_spin)
add_subdirectory(listener_async_spin)
#add_subdirectory(listener_single_message)
add_subdirectory(listener_with_tracked_object)
add_subdirectory(listener_unreliable)
add_subdirectory(listener_class)
add_subdirectory(node_handle_namespaces)
add_subdirectory(custom_callback_processing)
add_subdirectory(timers)
add_subdirectory(parameters)
endif()
